--- a/views/services.hbs
+++ b/views/services.hbs
@@ -57,16 +57,12 @@
 			<div class="clearfix"> </div>
 			<nav align="right">
 				<ul class="pagination pagination-sm">
-				{{#if pages}}
-					{{#each pages}}
-							<li><a href="services?page={{pages}}">{{pages}}</a></li>
-					{{/each}}
-				{{/if}}
-					{{!-- <li><a href="services?page=1">1</a></li>
+				
+					<li><a href="services?page=1">1</a></li>
 					<li><a href="services?page=2">2</a></li>
 					<li><a href="services?page=3">3</a></li>
 					<li><a href="services?page=4">4</a></li>
-					<li><a href="services?page=5">5</a></li> --}}
+					<li><a href="services?page=5">5</a></li>
 					
 				</ul>
 			</nav>
