--- a/views/index.hbs
+++ b/views/index.hbs
@@ -36,8 +36,8 @@
 							<div class="banner-textagileinfo"> 
 								<h6>Welcome To Technivo Tv</h6>	
 								<h3>Safe,secure and convenient banking</h3>	 
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in consectetur adipiscing elit, Nullam in neque  neque malesua.</p>
-								<div class="agileits-banner-bot">
+								<p>
+									<div class="agileits-banner-bot">
 									<div class="col-md-4 col-sm-4 col-xs-4 w3l-bb-grid1">
 										<h5>01</h5>
 										<h4>convenient</h4>	
@@ -62,8 +62,8 @@
 							<div class="banner-textagileinfo">
 								<h6>Welcome To Technivo Tv</h6>	
 								<h3>Safe,secure and convenient banking</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in consectetur adipiscing elit, Nullam in neque  neque malesua.</p>
-								<div class="agileits-banner-bot">
+								<p>
+									<div class="agileits-banner-bot">
 									<div class="col-md-4 col-sm-4 col-xs-4 w3l-bb-grid1">
 										<h5>01</h5>
 										<h4>convenient</h4>
@@ -99,9 +99,7 @@
 						</div>
 						<div class="col-md-6 col-sm-6 col-xs-6  agile-about-bottom-right">
 							<p>BTech is a technological innovation to ease the work of peoples in searching and locaating right material vendor or building technician suitable for a specific job.</p>
-							<p class="w3ls-about-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget faucibus est.Suspendisse auctor urna blandit ultricies maximus.
-							Sed accumsan auctor lacus ac mattis. Mauris at nibh purus. Nullam vulputate, urna id facilisis eleifend, nisl turpis suscipit augue, eget tincidunt velit nunc ut lectus.Morbi rutrum ut risus sed hendrerit.</p>
-						
+							<p class="w3ls-about-text">
 						</div>
 						<div class="clearfix"> </div>
 				   </div>
@@ -217,7 +215,7 @@
 					</div>	
 					<div class="col-md-10 col-sm-10 col-xs-10 sr-txt">
 						<h5>save time</h5>
-						<p>Itaque earum rerum hic a sapiente delectus</p>
+						<p>Limited time to spend to make an appointment</p>
 					</div>	
 					<div class="clearfix"></div>
 				</div>
@@ -227,7 +225,7 @@
 					</div>	
 					<div class="col-md-10 col-sm-10 col-xs-10 sr-txt">	
 						<h5>Creditable </h5>
-						<p>Itaque earum rerum hic a sapiente delectus</p>
+						<p>We value our honour, try us and we'll deliver the best</p>
 					</div>
 					<div class="clearfix"></div>
 				</div>	
@@ -237,7 +235,7 @@
 					</div>	
 					<div class="col-md-10 col-sm-10 col-xs-10 sr-txt">	
 						<h5> No fraud </h5>
-						<p>Itaque earum rerum hic a sapiente delectus</p>
+						<p>Free from fraudsters</p>
 					</div>	
 					<div class="clearfix"> </div>
 				</div>
@@ -247,7 +245,7 @@
 					</div>	
 					<div class="col-md-10 col-sm-10 col-xs-10 sr-txt">
 						<h5>Connect  Online</h5>
-						<p>Itaque earum rerum hic a sapiente delectus</p>
+						<p>Lets get connected!!!</p>
 					</div>	
 					<div class="clearfix"> </div>
 				</div>
